--- a/dash.Rmd
+++ b/dash.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "`r params$set_title`"
 params:
-  filename : "/Users/matteo/Desktop/darts/2021-04-25_summary.Rdata"
+  filename : "/Users/matteo/Desktop/scores/2021-04-25_summary.Rdata"
   set_title: "summary"
   wd: "~/desktop"
 output: 
@@ -43,15 +43,30 @@ Column
 -----------------------------------------------------------------------
 ### Commentary
 <br>
-Oggi hai giocato `r res$number_of_legs` legs, usando `r sum(res$number_of_darts)` freccette. 
-<br>
+Oggi è stata una ` ` giornata: hai giocato ` ` leg, ` ` solito, tirando ` ` frecce, con un punteggio medio per tre frecce pari a ` `, ` `.  
+
+Il leg migliore è stato il ` `, in cui hai chiuso in ` ` frecce e con un checkout di ` `.  
+
+In quanto a power scoring, ` `: ` ` 180, ` ` 140+ e ` ` 100+.  
+
+In zona checkout, la migliore chiusura è stata ` ` nel leg ` `. La percentuale in doppia è ` `, ` `.  
+` ` avuto criticità con ` ` doppie` `
+
+**Punti di forza**
+
+Oggi i tuoi punti di forza sono stati:  
+` `
+
+**Punti deboli**
+
+Oggi i tuoi punti deboli sono stati:  
+` `
 
 
-La chiusura più alta è stata `r max(res$checkouts)`, eseguita nel leg `r which(res$checkouts == max(res$checkouts))`.
-<br>
+**Consigli**
 
-
-
+Durante il prossimo allenamento focalizzati su:  
+` `
 
 
 Column 
@@ -68,10 +83,10 @@ df <- data.frame(score = as.character(c(1, 18, 4, 13, 6, 10, 15, 2, 17, 3, 19, 7
            )
 dove <- data.frame(
   punti = c("0", paste("d", c(1:20), sep = ""), paste("o",(1:20), sep = ""), paste("t", c(1:20), sep = ""), paste("i",(1:20), sep = ""),  "25", "d25"),
-  xmin = c(0, rep(c(0, 7, 9, 2, 18, 4, 11, 13, 16, 5, 14, 17, 3, 15, 6, 12, 8, 1, 10, 19), 4), rep(0, 2)) + 0.1,
-  xmax = c(20, rep(c(1, 8, 10, 3, 19, 5, 12, 14, 17, 6, 15, 18, 4, 16, 7, 13, 9, 2, 11, 20), 4), rep(20, 2)) - 0.1,
-  ymin = c(171, rep(162, 20), rep(107, 20), rep(99, 20), rep(16, 20), 12.7/2, 0) + 0.1,
-  ymax = c(204, rep(170, 20), rep(162, 20), rep(107, 20), rep(99, 20), 16, 12.7/2) - 0.1
+  xmin = c(0, rep(c(0, 7, 9, 2, 18, 4, 11, 13, 16, 5, 14, 17, 3, 15, 6, 12, 8, 1, 10, 19), 4), rep(0, 2)) + 0.005,
+  xmax = c(20, rep(c(1, 8, 10, 3, 19, 5, 12, 14, 17, 6, 15, 18, 4, 16, 7, 13, 9, 2, 11, 20), 4), rep(20, 2)) - 0.005,
+  ymin = c(171, rep(162, 20), rep(107, 20), rep(99, 20), rep(16, 20), 12.7/2, 0) + 0.5,
+  ymax = c(204, rep(170, 20), rep(162, 20), rep(107, 20), rep(99, 20), 16, 12.7/2) - 0.5
 )
 
 dfdove <- fun_dove(res$darts)
